--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <title>Tribute Page</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -25,10 +25,14 @@
       <h1 id="title">Dr. Norman Borlaug</h1>
       <p>The man who saved a billion lives</p>
       <div id="img-div">
-        <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman standing in Mexican wheat field with a group of biologists" />
+        <img
+          id="image"
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+          alt="Dr. Norman standing in Mexican wheat field with a group of biologists"
+        />
         <div id="img-caption">
-          Dr. Norman Borlaug, third from the left, trains biologists in Mexico on
-          how to increase wheat yields - part of his life-long war on hunger.
+          Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+          on how to increase wheat yields - part of his life-long war on hunger.
         </div>
       </div>
       <section id="tribute-info">
@@ -37,39 +41,41 @@
           <li><strong>1914</strong> - Born in Cresco, Iowa</li>
           <li>
             <strong>1933</strong> - Leaves his family's farm to attend the
-            University of Minnesota, thanks to a Depression era program known as the
-            "National Youth Administration"
+            University of Minnesota, thanks to a Depression era program known as
+            the "National Youth Administration"
           </li>
           <li>
-            <strong>1935</strong> - Has to stop school and save up more money. Works
-            in the Civilian Conservation Corps, helping starving Americans. "I saw
-            how food changed them", he said. "All of this left scars on me."
+            <strong>1935</strong> - Has to stop school and save up more money.
+            Works in the Civilian Conservation Corps, helping starving
+            Americans. "I saw how food changed them", he said. "All of this left
+            scars on me."
           </li>
           <li>
-            <strong>1937</strong> - Finishes university and takes a job in the US
-            Forestry Service
+            <strong>1937</strong> - Finishes university and takes a job in the
+            US Forestry Service
           </li>
           <li>
-            <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets
-            laid off due to budget cuts. Inspired by Elvin Charles Stakman, he
-            returns to school study under Stakman, who teaches him about breeding
-            pest-resistent plants.
+            <strong>1938</strong> - Marries wife of 69 years Margret Gibson.
+            Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman,
+            he returns to school study under Stakman, who teaches him about
+            breeding pest-resistent plants.
           </li>
           <li>
-            <strong>1941</strong> - Tries to enroll in the military after the Pearl
-            Harbor attack, but is rejected. Instead, the military asked his lab to
-            work on waterproof glue, DDT to control malaria, disinfectants, and
-            other applied science.
+            <strong>1941</strong> - Tries to enroll in the military after the
+            Pearl Harbor attack, but is rejected. Instead, the military asked
+            his lab to work on waterproof glue, DDT to control malaria,
+            disinfectants, and other applied science.
           </li>
           <li>
-            <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
+            <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant
+            Pathology
           </li>
           <li>
             <strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-            leaves behind his pregnant wife, and flies to Mexico to head a new plant
-            pathology program. Over the next 16 years, his team breeds 6,000
-            different strains of disease resistent wheat - including different
-            varieties for each major climate on Earth.
+            leaves behind his pregnant wife, and flies to Mexico to head a new
+            plant pathology program. Over the next 16 years, his team breeds
+            6,000 different strains of disease resistent wheat - including
+            different varieties for each major climate on Earth.
           </li>
           <li>
             <strong>1945</strong> - Discovers a way to grown wheat twice each
@@ -91,21 +97,22 @@
             increase their maize and sorghum yields
           </li>
           <li>
-            <strong>1984</strong> - becomes a distinguished professor at Texas A&M
-            University
+            <strong>1984</strong> - becomes a distinguished professor at Texas
+            A&M University
           </li>
           <li>
-            <strong>2005</strong> - states "we will have to double the world food
-            supply by 2050." Argues that genetically modified crops are the only way
-            we can meet the demand, as we run out of arable land. Says that GM crops
-            are not inherently dangerous because "we've been genetically modifying
-            plants and animals for a long time. Long before we called it science,
-            people were selecting the best breeds."
+            <strong>2005</strong> - states "we will have to double the world
+            food supply by 2050." Argues that genetically modified crops are the
+            only way we can meet the demand, as we run out of arable land. Says
+            that GM crops are not inherently dangerous because "we've been
+            genetically modifying plants and animals for a long time. Long
+            before we called it science, people were selecting the best breeds."
           </li>
           <li><strong>2009</strong> - dies at the age of 95.</li>
         </ul>
         <blockquote
-          cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+          cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
+        >
           <p>
             "Borlaug's life and achievement are testimony to the far-reaching
             contribution that one man's towering intellect, persistence and
@@ -113,9 +120,8 @@
           </p>
           <cite>-- Indian Prime Minister Manmohan Singh</cite>
         </blockquote>
-
       </section>
     </main>
-    <script  src="js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
