--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
     - The freeCodeCamp Team
 
     -->
-    <main id="main">
-      <h1 id="title">Dr. Norman Borlaug</h1>
-      <p>The man who saved a billion lives</p>
-      <div id="img-div">
-        <img
-          id="image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
-          alt="Dr. Norman standing in Mexican wheat field with a group of biologists"
-        />
-        <div id="img-caption">
-          Dr. Norman Borlaug, third from the left, trains biologists in Mexico
-          on how to increase wheat yields - part of his life-long war on hunger.
+    <div id="container">
+      <main class="hero">
+        <h1 id="title">Dr. Norman Borlaug</h1>
+        <p>The man who saved a billion lives</p>
+        <div id="img-div">
+          <img
+            id="image"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+            alt="Dr. Norman standing in Mexican wheat field with a group of biologists"
+          />
+          <div id="img-caption">
+            Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+            on how to increase wheat yields - part of his life-long war on
+            hunger.
+          </div>
         </div>
-      </div>
+      </main>
       <section id="tribute-info">
         <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
         <ul>
@@ -121,7 +124,7 @@
           <cite>-- Indian Prime Minister Manmohan Singh</cite>
         </blockquote>
       </section>
-    </main>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
