--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     -->
     <div id="container">
       <main class="hero">
-        <h1 id="title">Dr. Norman Borlaug</h1>
+        <h1 id="hero__title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
-        <div id="img-div">
+        <div id="hero__img-div">
           <img
-            id="image"
+            id="hero__img"
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
             alt="Dr. Norman standing in Mexican wheat field with a group of biologists"
           />
-          <div id="img-caption">
+          <div id="hero__img-caption">
             Dr. Norman Borlaug, third from the left, trains biologists in Mexico
             on how to increase wheat yields - part of his life-long war on
             hunger.
@@ -39,7 +39,9 @@
         </div>
       </main>
       <section id="tribute-info">
-        <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+        <h3 id="tribute-into__headline">
+          Here's a time line of Dr. Borlaug's life:
+        </h3>
         <ul>
           <li><strong>1914</strong> - Born in Cresco, Iowa</li>
           <li>
