fix linters errors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tribute Page</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -11,16 +12,16 @@
 
     <!--
 
-    Hello Camper!
+  Hello Camper!
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
+  For now, the test suite only works in Chrome!
+  Please read the README below in the JS Editor before beginning.
+  Feel free to delete this message once you have read it.
+  Good luck and Happy Coding!
 
-    - The freeCodeCamp Team
+  - The freeCodeCamp Team
 
-    -->
+  -->
     <div id="container">
       <main class="hero">
         <h1 id="hero__title">Dr. Norman Borlaug</h1>
